cluster/test/longhorn/deployment.yaml
---
# Create the longhorn namespace
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system

---
apiVersion: source.toolkit.fluxcd.io/v1
kind: HelmRepository
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  interval: 12h
  url: https://charts.longhorn.io

---

apiVersion: helm.toolkit.fluxcd.io/v2
kind: HelmRelease
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  interval: 10m
  releaseName: longhorn
  chart:
    spec:
      chart: longhorn
      version: 1.7.2
      sourceRef:
        kind: HelmRepository
        name: longhorn
  values:
    defaultBackupStore:
      backupTarget: s3://test-backup@lan/
      backupTargetCredentialSecret: minio-secret
